Changed makeIcosaGeo's __str__ to __repr__ and added plain __str__; cleaned changelog and setup.cfg

--- a/pypevue/setup.cfg
+++ b/pypevue/setup.cfg
@@ -4,7 +4,7 @@
 
 [metadata]
 name = pypevue
-description = Add a short description here!
+description = Easy scripting of 3D "posts and pipes" figures
 author = James Waldby
 author-email = j13@pat7.com
 license = mit
