with  setup.cfg mods for pypevu in .local/bin; with tests/icosaGeoPoint_test.py

--- a/pypevue/setup.cfg
+++ b/pypevue/setup.cfg
@@ -52,11 +52,11 @@ testing =
 
 [options.entry_points]
 # Add here console scripts like:
-# console_scripts =
-#     script_name = mypkg.module:function
+console_scripts =
+     pypevu = pypevue.pypevu:run
 # For example:
 # console_scripts =
-#     fibonacci = mypkg.skeleton:run
+#     fibonacci = pypevue.skeleton:run
 # And any other entry points, for example:
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
@@ -72,7 +72,7 @@ extras = True
 # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
 # in order to write a coverage file that can be read by Jenkins.
 addopts =
-    --cov mypkg --cov-report term-missing
+    --cov pypevue --cov-report term-missing
     --verbose
 norecursedirs =
     dist
@@ -110,6 +110,6 @@ exclude =
 # PyScaffold's parameters when the project was created.
 # This will be used when updating. Do not change!
 version = 3.2.3
-package = mypkg
+package = pypevue
 extensions =
     no_skeleton
