Set url in setup, emphasis in README

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,16 +10,16 @@ author-email = j13@pat7.com
 license = mit
 long-description = file: README.rst
 long-description-content-type = text/x-rst; charset=UTF-8
-url = https://github.com/pyscaffold/pyscaffold/
+url = https://github.com/ghjwp7/pypevue
 project-urls =
-    Documentation = https://pyscaffold.org/
+    Documentation = https://github.com/ghjwp7/pypevue/blob/master/pypevue/README.rst
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.python.org/pypi?%3Aaction=list_classifiers
 classifiers =
     Development Status :: 4 - Beta
-    Programming Language :: Python
+    Programming Language :: Python 3...
 
 [options]
 zip_safe = False
